force-app/main/default/objects/TASKRAY__trTaskTime__c/TASKRAY__trTaskTime__c.object-meta.xml
<CustomObject>
    <description>This is an object used to track time on a TaskRay Task.</description>
    <label>TaskRay Time</label>
    <nameField>
        <displayFormat>TIME-{0}</displayFormat>
        <label>Time Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>TaskRay Time</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>