force-app/main/default/objects/TASKRAY__trTaskTime__c/fields/TASKRAY__Billable__c.field-meta.xml
<CustomField>
    <fullName>TASKRAY__Billable__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is this Time object billable?</description>
    <label>Billable</label>
    <type>Checkbox</type>
</CustomField>