force-app/main/default/objects/TASKRAY__trTaskTime__c/fields/TASKRAY__Date__c.field-meta.xml
<CustomField>
    <fullName>TASKRAY__Date__c</fullName>
    <description>The date of the Time entry</description>
    <label>Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>