force-app/main/default/objects/TASKRAY__trTaskTime__c/fields/TASKRAY__Owner__c.field-meta.xml
<CustomField>
    <fullName>TASKRAY__Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>TaskRay_Time</relationshipName>
    <type>Lookup</type>
</CustomField>