force-app/main/default/objects/TASKRAY__trTaskTime__c/fields/TASKRAY__Project__c.field-meta.xml
<CustomField>
    <fullName>TASKRAY__Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>TaskRay Project</label>
    <referenceTo>TASKRAY__Project__c</referenceTo>
    <relationshipLabel>TaskRay Time</relationshipLabel>
    <relationshipName>TaskRay_Time</relationshipName>
    <type>Lookup</type>
</CustomField>