force-app/main/default/objects/TASKRAY__trTaskTime__c/fields/TASKRAY__Task__c.field-meta.xml
<CustomField>
    <fullName>TASKRAY__Task__c</fullName>
    <inlineHelpText>Task that Time object is related to.</inlineHelpText>
    <label>TaskRay Task</label>
    <referenceTo>TASKRAY__Project_Task__c</referenceTo>
    <relationshipLabel>TaskRay Time</relationshipLabel>
    <relationshipName>TaskRay_Time</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>