force-app/main/default/objects/TASKRAY__trTaskTime__c/fields/TASKRAY__trTimerEnd__c.field-meta.xml
<CustomField>
    <fullName>TASKRAY__trTimerEnd__c</fullName>
    <inlineHelpText>Used for the Timer functionality in TaskRay.</inlineHelpText>
    <label>Timer End</label>
    <type>DateTime</type>
</CustomField>