force-app/main/default/objects/TASKRAY__trTaskTime__c/fields/TASKRAY__trTimeType__c.field-meta.xml
<CustomField>
    <fullName>TASKRAY__trTimeType__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Admin Must Configure Values for Type</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>