force-app/main/default/objects/TASKRAY__trTaskTime__c/listViews/TASKRAY__AllTimeThisWeek.listView-meta.xml
<ListView>
    <fullName>TASKRAY__AllTimeThisWeek</fullName>
    <columns>NAME</columns>
    <columns>TASKRAY__Task__c</columns>
    <columns>TASKRAY__Date__c</columns>
    <columns>TASKRAY__Hours__c</columns>
    <columns>TASKRAY__Billable__c</columns>
    <columns>TASKRAY__Owner__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>TASKRAY__Date__c</field>
        <operation>equals</operation>
        <value>THIS_WEEK</value>
    </filters>
    <label>All Time (This Week)</label>
</ListView>